--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,6 +4,10 @@
     <string name="act_sub">Sub</string>
     <string name="act_mul">Mul</string>
     <string name="act_div">Div</string>
+    <string name="act_sin">Sin</string>
+    <string name="act_cos">Cos</string>
+    <string name="act_tan">Tan</string>
+    <string name="act_kor">Kor</string>
     <string name="info_result">Result:</string>
     <string name="info_zero">0</string>
     <string name="inf_value_a">Num A:</string>
